language/move-lang/tests/move_check/expansion/function_invalid_names.exp
error[E02010]: invalid name
  ┌─ tests/move_check/expansion/function_invalid_names.move:3:9
  │
3 │     fun _foo() {}
  │         ^^^^ Invalid function name '_foo'. Function names cannot start with '_'

error[E02010]: invalid name
  ┌─ tests/move_check/expansion/function_invalid_names.move:4:9
  │
4 │     fun _() {}
  │         ^ Invalid function name '_'. Function names cannot start with '_'

error[E02010]: invalid name
  ┌─ tests/move_check/expansion/function_invalid_names.move:5:9
  │
5 │     fun ___() {}
  │         ^^^ Invalid function name '___'. Function names cannot start with '_'

error[E02010]: invalid name
   ┌─ tests/move_check/expansion/function_invalid_names.move:10:9
   │
10 │     fun _foo() {}
   │         ^^^^ Invalid function name '_foo'. Function names cannot start with '_'

error[E02010]: invalid name
   ┌─ tests/move_check/expansion/function_invalid_names.move:13:9
   │
13 │     fun _() {}
   │         ^ Invalid function name '_'. Function names cannot start with '_'

error[E02010]: invalid name
   ┌─ tests/move_check/expansion/function_invalid_names.move:16:9
   │
16 │     fun ___() {}
   │         ^^^ Invalid function name '___'. Function names cannot start with '_'

