language/move-lang/tests/move_check/expansion/function_invalid_names.move
address 0x42 {
module M {
    fun _foo() {}
    fun _() {}
    fun ___() {}
}
}

script {
    fun _foo() {}
}
script {
    fun _() {}
}
script {
    fun ___() {}
}
